# vagrant_snap

./: .gitignore  README.md  Vagrantfile  install.sh  metadata.yml  requirements.txt  sequence_and_publish_task.yml  setup.cfg  start_tasks.sh
files/: snapteld.conf
processor/rolling_average/: rolling_average_processor.py
processor/tag/: sequence_processor.py
provisioning/: install.sh  install_graphite.sh  start_tasks.sh
rolling_average/: rolling_average_processor.py
sequence/: sequence_processor.py
tasks/: average_and_publish_task.yml  average_and_publish_to_graphite_task.yml  docker_publish_to_graphite_task.yml  psutil_publish_to_graphite_task.yml  sequence_and_publish_task.yml
