[metadata]
name=plugin_dk
description-file = README.md
license=Apache-2
summary=Plugin POC for snap
author=Kennedy, David
author-email=darfed@gmail.com
version=0.0.1

[wheel]
universal = 1

[files]
packages =
    sequence

[global]
setup-hooks =
    pbr.hooks.setup_hook

[pbr]
autodoc_index_modules = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
